# gaussian-splatting-relighting

./: .gitignore  LICENSE.md  README.md  _colmap  _render_relighting_video.py  arguments.py  convert.py  download_real_datasets.sh  download_real_samples.sh  download_real_scenes.sh  download_synthetic_datasets.sh  download_synthetic_samples.sh  download_synthetic_scenes.sh  eval.py  pyrightconfig.json  render.py  render_relighting_video.sh  render_synthetic_videos.sh  requirements.txt  train.py  train_all_synthetic_scenes.sh
SIBR_viewers/: PROTOCOL.md  build.cmd
SIBR_viewers/src/projects/gaussianviewer/apps/gaussianViewer/: CMakeLists.txt
SIBR_viewers/src/projects/gaussianviewer/renderer/: GaussianSurfaceRenderer.cpp  GaussianView.cpp  GaussianView.hpp
SIBR_viewers/src/projects/remote/renderer/: RemotePointView.cpp  RemotePointView.hpp
gaussian_renderer/: __init__.py  gaussian_renderer.py  network_gui.py
relighting/: gray_ball_renderer.py  light_directions.json  light_directions.py  sh_encoding.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py  scene.py
utils/: camera_utils.py  general_utils.py
video_scripts/: montage.sh  montage.txt  montage_orbit.sh  montage_orbit.txt
